--- a/app/src/main/res/layout/inputpesanan.xml
+++ b/app/src/main/res/layout/inputpesanan.xml
@@ -12,8 +12,7 @@
     <Spinner
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/spinner2"
-        android:layout_weight="0.01" />
+        android:id="@+id/spinner2"/>
 
     <TextView
         android:layout_width="wrap_content"
