--- a/app/src/main/res/layout/listcustompesanan.xml
+++ b/app/src/main/res/layout/listcustompesanan.xml
@@ -10,15 +10,25 @@
         android:id="@+id/textView6"
         android:layout_gravity="center_horizontal" />
 
-    <TextView
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="New Text"
-        android:id="@+id/textView7" />
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.5"
+            android:text="New Text"
+            android:id="@+id/textView7" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="New Text"
-        android:id="@+id/textView8" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.5"
+            android:text="New Text"
+            android:id="@+id/textView8" />
+
+    </LinearLayout>
+
+
 </LinearLayout>
