--- a/app/src/main/res/layout/detailproduk.xml
+++ b/app/src/main/res/layout/detailproduk.xml
@@ -67,11 +67,11 @@
             android:layout_height="wrap_content"
             android:text="Foto" />
 
-        <EditText
-            android:id="@+id/editText5"
-            android:layout_width="match_parent"
+
+        <ImageView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="Foto Produk" />
+            android:id="@+id/imageView4" />
 
         <TextView
             android:id="@+id/textView6"
@@ -117,5 +117,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Simpan" />
+        <Button
+        android:id="@+id/button9"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Cari Gambar" />
     </LinearLayout>
 </ScrollView>
