--- a/app/src/main/res/layout/detailproduk.xml
+++ b/app/src/main/res/layout/detailproduk.xml
@@ -117,7 +117,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Simpan" />
-        <Button
+        Button
         android:id="@+id/button9"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
